--- a/styles.css
+++ b/styles.css
@@ -21,6 +21,14 @@ header {
     justify-content: space-between;
     align-items: center;
 }
+ .fade-in {
+            opacity: 0;
+            transition: opacity 1s ease;
+        }
+
+        .fade-in.active {
+            opacity: 1;
+        }
 
 .nav-bar {
     list-style-type: none;
@@ -49,7 +57,7 @@ header {
 .container {
     margin: 20px auto;
     padding: 20px;
-    background-color: #fff;
+    background-color: orange;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     border-radius: 12px;
     max-width: 99%;
@@ -57,13 +65,13 @@ header {
 
 .article {
     background-color: #fff;
-    padding: 20px;
+    padding: 100px;
     border-radius: 8px;
     box-shadow: 0 5px 4px rgba(0, 0, 0, 0.1);
     transition: transform 0.3s ease;
-    margin-bottom: 20px;
+    margin-bottom: 100px;
     max-width: 99%;
-    max-height: 400px;
+    max-height: 100%;
     overflow-y: auto;
 }
 
