--- a/styles.css
+++ b/styles.css
@@ -129,7 +129,17 @@ header {
     border: none;
     cursor: pointer;
 }
-
+.works_imgcontainer{
+    background-color: #fff;
+    padding: 100px;
+    border-radius: 8px;
+    box-shadow: 0 5px 4px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s ease;
+    margin-bottom: 100px;
+    max-width: 99%;
+    max-height: 100%;
+    overflow-y: auto;
+}
 .p-pic {
     width: 200px;
     height: 200px;
